--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-# dependencies
-/node_modules
-
-# next.js build output
-/.next
-/out
-
-# production
-/build
-/dist
-
-# misc
-.DS_Store
-*.log
-.env
+node_modules
+.next
+out
+dist
+build
